<resources>
    <string name="app_name">VMedic+</string>

    <string name="adm">Ventana de adminitrador</string>
    <string name="botoAdmi">Consultar Inventario</string>
    <string name="botoAdmii">Agregar</string>
    <string name="editAdmi">Nombre del medicamento</string>
    <string name="editAdmii">"Presentación"</string>
    <string name="editAdmiii"> Descripcion del medicamento</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Amount">Cantidad</string>
    <string name="infoVoluntario">Hola Voluntario, ¿Necesitas ayuda con algún medicamento? ¡Consulta el inventario!</string>
    <string name="voluntario">Ventana de voluntario</string>
    <string name="doctor">Ventana de doctor</string>
</resources>
